--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -78,8 +78,8 @@
 					<tr style="vertical-align: top;">
 						<th>#</th>
 						<th>Evacuation Center</th>
-						<th>Type</th>
-						<th>Barangay</th>
+						<th style="text-align: center;">Type<br /></th>
+						<th style="text-align: center;">Barangay<br /></th>
 						<th style="text-align: center;">Capacity</th>
 						<th style="text-align: center;">Status</th>
 						<th></th>
