--- a/Pages/ECStaff/Index.cshtml
+++ b/Pages/ECStaff/Index.cshtml
@@ -10,7 +10,7 @@
 		<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-				<li class="breadcrumb-item active"><a><strong>Evacuation Center</strong></a></li>
+				<li class="breadcrumb-item active"><a><strong>Evacuation Center Staff</strong></a></li>
 			</ol>
 		</nav>
 	</div>
