--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -98,87 +98,84 @@
 		<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-				<li class="breadcrumb-item active"><a><strong>Disaster</strong></a></li>
+				<li class="breadcrumb-item active"><a><strong>Family</strong></a></li>
 			</ol>
 		</nav>
 	</div>
 
-
-		<div class="row p-2">
-			<div class="col d-flex align-items-center">
-				<h1><i class="bi bi-people-fill"></i>Family</h1>
-			</div>
-
-			<div class="col-auto d-flex justify-content-between align-items-center">
-				<div class="d-flex justify-content-end align-items-center">
-					<a class="btn btn-primary mb-2 button-spacing" href="/family"><ion-icon name="download-outline"></ion-icon> Import .CSV File</a>
-					<a class="btn btn-primary mb-2" href="/family/profile/add/index">
-						<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
-					</a>
-				</div>
-			</div>
+	<!-- Title and Add Button -->
+	<div class="row p-2">
+		<div class="col d-flex align-items-center">
+			<h1><i class="bi bi-people-fill"></i>Family</h1>
 		</div>
 
+		<div class="col-auto d-flex justify-content-between align-items-center">
+			<div class="d-flex justify-content-end align-items-center">
+				<a class="btn btn-primary mb-2 button-spacing" href="/family"><ion-icon name="download-outline"></ion-icon> Import .CSV File</a>
+				<a class="btn btn-primary mb-2" href="/family/profile/add/index">
+					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
+				</a>
+			</div>
+		</div>
+	</div>
 
-		<div class="row p-2">
-			<div class="col-lg-12">
-				<table id="disaster-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-					<thead>
-						<tr>
-							<th>#</th>
-							<th>Serial Number</th>
-							<th>Street Address</th>
-							<th>
-								<a href="#" id="barangayFilterLink" class="filter-link" onclick="toggleFilterChecklist('barangayFilter')">
-									Barangay
-									<ion-icon id="barangayFilterArrow" name="filter"></ion-icon>
-								</a>
-								<div id="barangayFilter" class="filter-box" style="display: none;">
+	<!-- Table -->
+	<div class="row p-2">
+		<div class="col-lg-12">
+			<table id="disaster-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Serial Number</th>
+						<th>Street Address</th>
+						<th>
+							<a href="#" id="barangayFilterLink" class="filter-link" onclick="toggleFilterChecklist('barangayFilter')">
+								Barangay
+								<ion-icon id="barangayFilterArrow" name="filter"></ion-icon>
+							</a>
+							<div id="barangayFilter" class="filter-box" style="display: none;">
+								<label>
+									<input type="checkbox" name="barangayFilterValue" value="Select All" onchange="selectAll('barangayFilter')"> Select All
+								</label>
+								<br />
+								@foreach (var barangay in Model.UniqueBarangays)
+								{
 									<label>
-										<input type="checkbox" name="barangayFilterValue" value="Select All" onchange="selectAll('barangayFilter')"> Select All
+										<input type="checkbox" name="barangayFilterValue" value="@barangay"> @barangay
 									</label>
 									<br />
-									@foreach (var barangay in Model.UniqueBarangays)
-									{
-										<label>
-											<input type="checkbox" name="barangayFilterValue" value="@barangay"> @barangay
-										</label>
-										<br />
-									}
-									<button class="rounded-button" onclick="applyFilter('barangayFilter')">Apply</button>
-								</div>
-							</th>
-							<th>Family Size</th>
-							<th></th>
+								}
+								<button class="rounded-button" onclick="applyFilter('barangayFilter')">Apply</button>
+							</div>
+						</th>
+						<th>Family Size</th>
+						<th></th>
+					</tr>
+				</thead>
+
+				<tbody>
+					@{ var counter = 1; }
+					@foreach (var item in Model.listFamily)
+					{
+						<tr>
+							<td width="5%">@counter</td>
+							<td width="15%">@item.serialNum</td>
+							<td width="25%">@item.streetAddress</td>
+							<td width="20%">@item.barangayName</td>
+							<td width="15%"></td>
+							<td width="10%">
+								<!-- View button -->
+								<a class="btn btn-success edit-button" href="/family/profile/index?familyID=@item.familyID">
+									View
+								</a>
+							</td>
 						</tr>
-					</thead>
-
-					<tbody>
-						@{
-							var counter = 1;
-						}
-						@foreach (var item in Model.listFamily)
-						{
-							<tr>
-								<td width="5%">@counter</td>
-								<td width="15%">@item.serialNum</td>
-								<td width="25%">@item.streetAddress</td>
-								<td width="20%">@item.barangayName</td>
-								<td width="15%"></td>
-								<td width="10%">
-									<!-- View button -->
-									<a class="btn btn-success edit-button" href="/family/profile/index?familyID=@item.familyID">
-										View
-									</a>
-								</td>
-							</tr>
-							counter++;
-						}
-					</tbody>
-				</table>
-			</div>
+						counter++;
+					}
+				</tbody>
+			</table>
 		</div>
-
+	</div>
 </div>
 
 
