--- a/Pages/Family/Profile/Index.cshtml
+++ b/Pages/Family/Profile/Index.cshtml
@@ -83,9 +83,19 @@
 	</div>
 </div>
 
+
+<div class="row mt-3 d-flex justify-content-center align-items-center">
+
+	<div class="col text-end">
+		<a class="btn btn-primary mb-2" href="/family/profile/VulnerabilityAssessment"><i class="bi bi-list-columns"></i>View Vulnerability Assessment</a>
+	</div>
+
+	<div class="col text-start">
+		<a class="btn btn-primary mb-2" href="/family/profile/ReliefDistributionRecord"><i class="bi bi-clipboard2-fill"></i>View Relief Distribution</a>
+	</div>
+</div>
+
 <div class="content">
-
-
     <!-- Table -->
     <div class="row p-2">
         <div class="col-lg-12">
